--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
+@import "./css/global.css";
+
+body {
+    font-family: "Anek Tamil", sans-serif;
+    font-weight: 400;
+    background-color: #ddd;
+}
+
+p,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+button {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+
+.page {
+    display: flex;
+    justify-content: center;
+}
+
+/* ------------------------------------------------- */
+
 .accordion {
     max-width: 400px;
     width: 100%;
@@ -86,4 +117,12 @@
 
 .accordion__body.is-active .accordion__content {
     transform: translateY(0px);
+}
+
+/* Исправляет прыгающий скролл */
+@media screen and (min-width: 960px) {
+    html {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+    }
 }
